Wed, Apr 11, 2007 Daniel R Fisher
1.  I fixed a bug in QMCDansWalkerInitialization.  In some cases, it
    allowing energy levels to be occupied before the lower energy
    level was completely full.  When the atoms are checked to see if
    they are charged and the electrons are moved around, it also makes
    sure that the lower energy level is full before the next one
    starts to be occupied.
2.  I changed the objective function in QMCEquilibrationArray.  I have
    been messing around with the objective function in the course of
    writing the paper, and found a new one that works better.

Tue, Mar 6, 2007 Amos Anderson
1.  I improved checkpointing. It will now put the checkpoint files
    into a sub directory. This means less clutter for a parallel job.
    It also allows you to specify a name to use for input checkpoint
    and a separate name for output checkpoint.
2.  QMCWalkers can now know the current iteration. This is useful
    since we might want to be more aggressive in handling bad walkers
    while equilibrating.
3.  I also improved the QMCWalker warning system.

Tue, Feb 13, 2007 Amos Anderson
1.  I fixed a bug in the checkpointing mechanism. It works again.

2.  I changed how parallel RNG seeds are generated. Now, it will
    request my_rank integers from the generator, and the last integer
    drawn will be used as the random seed.

Fri, Feb 9, 2007 Amos Anderson
1.  I changed random into Random. This makes it easier to use different
    RNG, and I've included SPRNG compatibility. Although I'm able to
    compile with SPRNG v4.0 (the C++ version), I get seg fault every time
    I initialize it, so something is wrong with their library.
2.  When running the QMcBeaver executable, it will print out whatever info
    I can find from the preprocessor macros as well as some general compile
    info.

Mon, Jan 22, 2007 Amos Anderson
1.  I changed the memory usage for QMCWalker. Previously, 3 walkers